[package]
name = "k1"
version = "0.1.1"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "A cargo runner for Rust-based operating system kernels."
license = "MIT"
repository = "https://github.com/philogroves/k1"

[dependencies]
cargo_metadata = "0.18.1"
ovmf-prebuilt = "0.2.7"
serde_json = "1.0.149"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
